Added support for more maps and teams, and cleaned up lots of code